Scrapping for entire data

--- a/pos_delta.ipynb
+++ b/pos_delta.ipynb
@@ -318,11 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_excel('pos_delta.xlsx')"
+    "df.to_csv('pos_delta.csv')"
    ]
   },
   {
