Added rest choose4-choose2 data for pos tagging

--- a/grammarly_compilation.ipynb
+++ b/grammarly_compilation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,31 +54,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>['Is there three banks next to my house.']</td>\n",
+       "      <td>['Golmaal is one of the funniest movies.']</td>\n",
        "      <td>No error found</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>['There three banks next to my house.']</td>\n",
+       "      <td>['Golmaal is one between the funniest movies.']</td>\n",
        "      <td>No error found</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>['There are three banks next to my house.']</td>\n",
+       "      <td>['Golmaal is one of the funny movies.']</td>\n",
        "      <td>No error found</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>[\"There aren't three banks next to my house.\"]</td>\n",
+       "      <td>['Golmaal is first of the funniest movies.']</td>\n",
        "      <td>No error found</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>[\"There isn't three banks next to my house.\"]</td>\n",
+       "      <td>['I am feel better.']</td>\n",
        "      <td>Incorrect verb form</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -86,15 +86,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   SNo                                         Options                Error\n",
-       "0    1      ['Is there three banks next to my house.']       No error found\n",
-       "1    2         ['There three banks next to my house.']       No error found\n",
-       "2    3     ['There are three banks next to my house.']       No error found\n",
-       "3    4  [\"There aren't three banks next to my house.\"]       No error found\n",
-       "4    5   [\"There isn't three banks next to my house.\"]  Incorrect verb form"
+       "   SNo                                          Options                Error\n",
+       "0    1       ['Golmaal is one of the funniest movies.']       No error found\n",
+       "1    2  ['Golmaal is one between the funniest movies.']       No error found\n",
+       "2    3          ['Golmaal is one of the funny movies.']       No error found\n",
+       "3    4     ['Golmaal is first of the funniest movies.']       No error found\n",
+       "4    5                            ['I am feel better.']  Incorrect verb form"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
