All data compiled

--- a/misc.ipynb
+++ b/misc.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,202 +36,81 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Unnamed: 1</th>\n",
-       "      <th>Unnamed: 2</th>\n",
-       "      <th>Unnamed: 3</th>\n",
-       "      <th>Unnamed: 4</th>\n",
-       "      <th>Grammarly</th>\n",
-       "      <th>Unnamed: 6</th>\n",
-       "      <th>Unnamed: 7</th>\n",
-       "      <th>Crio</th>\n",
-       "      <th>Unnamed: 9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Unnamed: 21</th>\n",
-       "      <th>Unnamed: 22</th>\n",
-       "      <th>Unnamed: 23</th>\n",
-       "      <th>Unnamed: 24</th>\n",
-       "      <th>Unnamed: 25</th>\n",
-       "      <th>Unnamed: 26</th>\n",
-       "      <th>Unnamed: 27</th>\n",
-       "      <th>Unnamed: 28</th>\n",
-       "      <th>Unnamed: 29</th>\n",
-       "      <th>Unnamed: 30</th>\n",
+       "      <th>Slide ID</th>\n",
+       "      <th>Options</th>\n",
+       "      <th>Correct ID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Slide Id</td>\n",
-       "      <td>Options</td>\n",
-       "      <td>Correct</td>\n",
-       "      <td>Slide Type</td>\n",
-       "      <td>slug</td>\n",
-       "      <td>Error</td>\n",
-       "      <td>Corrected</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Error</td>\n",
-       "      <td>Corrected</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>HIND6199593</td>\n",
+       "      <td>We came in early today because we had a meeting.</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>HIND2055067</td>\n",
-       "      <td>- Japanese language is difficult to learn.</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Missing Word</td>\n",
-       "      <td>- japanese language is difficult to learn.</td>\n",
-       "      <td>No error found</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>missing</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Missing Word</td>\n",
+       "      <td>HIND6199593</td>\n",
+       "      <td>We came in early today so we had a meeting.</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>HIND2055035</td>\n",
-       "      <td>- Smiths often eat in that expensive restauran...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Missing Word</td>\n",
-       "      <td>- smiths often eat in that expensive restauran...</td>\n",
-       "      <td>No error found</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>missing</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>HIND6199593</td>\n",
+       "      <td>We came in early today but we had a meeting.</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>HIND1473312086087</td>\n",
-       "      <td>\"Do that that you are able\" is a motto that ha...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Missing Word</td>\n",
-       "      <td>do that that you are able is a motto that has ...</td>\n",
-       "      <td>No error found</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>missing</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>HIND6199593</td>\n",
+       "      <td>We came in early today that's why we had a mee...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>HIND1473312086087</td>\n",
-       "      <td>\"Do that what you are able\" is a motto that ha...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Missing Word</td>\n",
-       "      <td>do that what you are able is a motto that has ...</td>\n",
-       "      <td>No error found</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>missing</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>HIND6345499</td>\n",
+       "      <td>Whose your favorite singer?</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Unnamed: 0                                         Unnamed: 1  \\\n",
-       "0           Slide Id                                            Options   \n",
-       "1        HIND2055067         - Japanese language is difficult to learn.   \n",
-       "2        HIND2055035  - Smiths often eat in that expensive restauran...   \n",
-       "3  HIND1473312086087  \"Do that that you are able\" is a motto that ha...   \n",
-       "4  HIND1473312086087  \"Do that what you are able\" is a motto that ha...   \n",
-       "\n",
-       "  Unnamed: 2    Unnamed: 3                                         Unnamed: 4  \\\n",
-       "0    Correct    Slide Type                                               slug   \n",
-       "1          3  Missing Word         - japanese language is difficult to learn.   \n",
-       "2          2  Missing Word  - smiths often eat in that expensive restauran...   \n",
-       "3          3  Missing Word  do that that you are able is a motto that has ...   \n",
-       "4          3  Missing Word  do that what you are able is a motto that has ...   \n",
-       "\n",
-       "        Grammarly Unnamed: 6  Unnamed: 7   Crio Unnamed: 9      ...       \\\n",
-       "0           Error  Corrected         NaN  Error  Corrected      ...        \n",
-       "1  No error found        NaN         NaN    NaN    missing      ...        \n",
-       "2  No error found        NaN         NaN    NaN    missing      ...        \n",
-       "3  No error found        NaN         NaN    NaN    missing      ...        \n",
-       "4  No error found        NaN         NaN    NaN    missing      ...        \n",
-       "\n",
-       "   Unnamed: 21 Unnamed: 22 Unnamed: 23  Unnamed: 24 Unnamed: 25  Unnamed: 26  \\\n",
-       "0          NaN         NaN         NaN          NaN         NaN          NaN   \n",
-       "1          NaN         NaN         NaN          NaN         NaN          NaN   \n",
-       "2          NaN         NaN         NaN          NaN         NaN          NaN   \n",
-       "3          NaN         NaN         NaN          NaN         NaN          NaN   \n",
-       "4          NaN         NaN         NaN          NaN         NaN          NaN   \n",
-       "\n",
-       "   Unnamed: 27  Unnamed: 28  Unnamed: 29   Unnamed: 30  \n",
-       "0          NaN          NaN          NaN           NaN  \n",
-       "1          NaN          NaN          NaN  Missing Word  \n",
-       "2          NaN          NaN          NaN           NaN  \n",
-       "3          NaN          NaN          NaN           NaN  \n",
-       "4          NaN          NaN          NaN           NaN  \n",
-       "\n",
-       "[5 rows x 31 columns]"
+       "      Slide ID                                            Options  Correct ID\n",
+       "0  HIND6199593   We came in early today because we had a meeting.           1\n",
+       "1  HIND6199593        We came in early today so we had a meeting.           1\n",
+       "2  HIND6199593       We came in early today but we had a meeting.           1\n",
+       "3  HIND6199593  We came in early today that's why we had a mee...           1\n",
+       "4  HIND6345499                        Whose your favorite singer?           2"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('misc.csv')\n",
+    "data = pd.read_csv('rest_choose4_choose_2.csv')\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data['Options']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_excel('questions_rest.xlsx', header= False)"
    ]
   },
   {
