Language tool nan data sdded

--- a/misc.ipynb
+++ b/misc.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,32 +44,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>HIND6199593</td>\n",
-       "      <td>We came in early today because we had a meeting.</td>\n",
+       "      <td>HIND4700548</td>\n",
+       "      <td>How much are those shoes in the window over th...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>HIND6199593</td>\n",
-       "      <td>We came in early today so we had a meeting.</td>\n",
+       "      <td>HIND4700548</td>\n",
+       "      <td>How much are these shoes in the window over th...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>HIND6199593</td>\n",
-       "      <td>We came in early today but we had a meeting.</td>\n",
+       "      <td>HIND4700548</td>\n",
+       "      <td>How much are that shoes in the window over there?</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>HIND6199593</td>\n",
-       "      <td>We came in early today that's why we had a mee...</td>\n",
+       "      <td>HIND4700548</td>\n",
+       "      <td>How much are this shoes in the window over there?</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>HIND6345499</td>\n",
-       "      <td>Whose your favorite singer?</td>\n",
+       "      <td>HIND4060599</td>\n",
+       "      <td>My brown skirt fit me well.</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>HIND4060599</td>\n",
+       "      <td>My brown skirt fits me well.</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>HIND4060599</td>\n",
+       "      <td>My brown skirt is fit me well.</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>HIND4060599</td>\n",
+       "      <td>My brown skirt is fits me well.</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -77,32 +95,237 @@
        "</div>"
       ],
       "text/plain": [
-       "      Slide ID                                            Options  Correct ID\n",
-       "0  HIND6199593   We came in early today because we had a meeting.           1\n",
-       "1  HIND6199593        We came in early today so we had a meeting.           1\n",
-       "2  HIND6199593       We came in early today but we had a meeting.           1\n",
-       "3  HIND6199593  We came in early today that's why we had a mee...           1\n",
-       "4  HIND6345499                        Whose your favorite singer?           2"
+       "      Slide ID                                            Options Correct ID\n",
+       "0  HIND4700548  How much are those shoes in the window over th...          1\n",
+       "1  HIND4700548  How much are these shoes in the window over th...          1\n",
+       "2  HIND4700548  How much are that shoes in the window over there?          1\n",
+       "3  HIND4700548  How much are this shoes in the window over there?          1\n",
+       "4  HIND4060599                        My brown skirt fit me well.          2\n",
+       "5  HIND4060599                       My brown skirt fits me well.          2\n",
+       "6  HIND4060599                     My brown skirt is fit me well.          2\n",
+       "7  HIND4060599                    My brown skirt is fits me well.          2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('rest_choose4_choose_2.csv')\n",
-    "data.head()"
+    "data = pd.read_csv('entire_data.csv')\n",
+    "data = data[['Slide ID','Options','Correct ID']]\n",
+    "data.head(8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data['Options']"
+    "data['is_correct'] = 0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Slide ID</th>\n",
+       "      <th>Options</th>\n",
+       "      <th>Correct ID</th>\n",
+       "      <th>is_correct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HIND4700548</td>\n",
+       "      <td>How much are those shoes in the window over th...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HIND4700548</td>\n",
+       "      <td>How much are these shoes in the window over th...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HIND4700548</td>\n",
+       "      <td>How much are that shoes in the window over there?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>HIND4700548</td>\n",
+       "      <td>How much are this shoes in the window over there?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HIND4060599</td>\n",
+       "      <td>My brown skirt fit me well.</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>HIND4060599</td>\n",
+       "      <td>My brown skirt fits me well.</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>HIND4060599</td>\n",
+       "      <td>My brown skirt is fit me well.</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>HIND4060599</td>\n",
+       "      <td>My brown skirt is fits me well.</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>HIND6462367</td>\n",
+       "      <td>Mohan is go to be three in June.</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>HIND6462367</td>\n",
+       "      <td>Mohan is going to be three in June.</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>HIND6462367</td>\n",
+       "      <td>Mohan is will be three in June.</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>HIND6462367</td>\n",
+       "      <td>Mohan is going to three in June.</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Slide ID                                            Options Correct ID  \\\n",
+       "0   HIND4700548  How much are those shoes in the window over th...          1   \n",
+       "1   HIND4700548  How much are these shoes in the window over th...          1   \n",
+       "2   HIND4700548  How much are that shoes in the window over there?          1   \n",
+       "3   HIND4700548  How much are this shoes in the window over there?          1   \n",
+       "4   HIND4060599                        My brown skirt fit me well.          2   \n",
+       "5   HIND4060599                       My brown skirt fits me well.          2   \n",
+       "6   HIND4060599                     My brown skirt is fit me well.          2   \n",
+       "7   HIND4060599                    My brown skirt is fits me well.          2   \n",
+       "8   HIND6462367                   Mohan is go to be three in June.          2   \n",
+       "9   HIND6462367                Mohan is going to be three in June.          2   \n",
+       "10  HIND6462367                    Mohan is will be three in June.          2   \n",
+       "11  HIND6462367                   Mohan is going to three in June.          2   \n",
+       "\n",
+       "    is_correct  \n",
+       "0            0  \n",
+       "1            0  \n",
+       "2            0  \n",
+       "3            0  \n",
+       "4            0  \n",
+       "5            0  \n",
+       "6            0  \n",
+       "7            0  \n",
+       "8            0  \n",
+       "9            0  \n",
+       "10           0  \n",
+       "11           0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ashutosh/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '\\\\\\\\\\\\\"are\\\\\\\\\\\\\" लगाने की ज़रुरत नहीं है. \\\\\\\\\\\\\"They speak\\\\\\\\\\\\\" = वे बोलते हैं.\"'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-99fadfc9a2d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mcorrect_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Correct ID'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mcorrect_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'is_correct'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '\\\\\\\\\\\\\"are\\\\\\\\\\\\\" लगाने की ज़रुरत नहीं है. \\\\\\\\\\\\\"They speak\\\\\\\\\\\\\" = वे बोलते हैं.\"'"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, data.shape[0],4):\n",
+    "    correct_id = int(data.iloc[i]['Correct ID']) - 1\n",
+    "    data.iloc[i + correct_id]['is_correct'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
