Added user dump and explration notebook

--- a/misc.ipynb
+++ b/misc.ipynb
@@ -682,6 +682,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RECORD_ID</th>\n",
+       "      <th>USER_ID</th>\n",
+       "      <th>SLIDE_ID</th>\n",
+       "      <th>ATTEMPT_NUMBER</th>\n",
+       "      <th>IS_CORRECT</th>\n",
+       "      <th>USER_RESPONSE</th>\n",
+       "      <th>CREATED_AT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>107674045</td>\n",
+       "      <td>kumar.ganesh199104@gmail.com</td>\n",
+       "      <td>HIND2804673</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>My name is Pooja.</td>\n",
+       "      <td>2018-06-01 00:00:01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>108068364</td>\n",
+       "      <td>sonamshrivastv6@gmail.com</td>\n",
+       "      <td>HIND2839239</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Hello! I am Pooja.</td>\n",
+       "      <td>2018-06-01 00:00:01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>107517978</td>\n",
+       "      <td>sunitalal9634@gmail.com</td>\n",
+       "      <td>HIND2893090</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>is</td>\n",
+       "      <td>2018-06-01 00:00:01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>107419929</td>\n",
+       "      <td>harichandrathakur@gmail.com</td>\n",
+       "      <td>HIND2958525</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>I amn't from India, I amn't Indian.</td>\n",
+       "      <td>2018-06-01 00:00:01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>108713359</td>\n",
+       "      <td>archus103@gmail.com</td>\n",
+       "      <td>HIND3307669</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>eight</td>\n",
+       "      <td>2018-06-01 00:00:01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   RECORD_ID                       USER_ID     SLIDE_ID  ATTEMPT_NUMBER  \\\n",
+       "0  107674045  kumar.ganesh199104@gmail.com  HIND2804673               1   \n",
+       "1  108068364     sonamshrivastv6@gmail.com  HIND2839239               2   \n",
+       "2  107517978       sunitalal9634@gmail.com  HIND2893090               1   \n",
+       "3  107419929   harichandrathakur@gmail.com  HIND2958525               1   \n",
+       "4  108713359           archus103@gmail.com  HIND3307669               2   \n",
+       "\n",
+       "   IS_CORRECT                        USER_RESPONSE           CREATED_AT  \n",
+       "0           1                    My name is Pooja.  2018-06-01 00:00:01  \n",
+       "1           1                   Hello! I am Pooja.  2018-06-01 00:00:01  \n",
+       "2           0                                   is  2018-06-01 00:00:01  \n",
+       "3           0  I amn't from India, I amn't Indian.  2018-06-01 00:00:01  \n",
+       "4           1                                eight  2018-06-01 00:00:01  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('lessonDiffDump.csv')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RECORD_ID         50000\n",
+       "USER_ID           50000\n",
+       "SLIDE_ID          50000\n",
+       "ATTEMPT_NUMBER    50000\n",
+       "IS_CORRECT        50000\n",
+       "USER_RESPONSE     50000\n",
+       "CREATED_AT        50000\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
